--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.26.2",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-twemoji": "^0.6.0"
+    "react-twemoji": "^0.6.0",
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@iconify-json/twemoji": "^1.2.5",
