--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-toastify": "^11.0.5",
     "react-twemoji": "^0.6.0",
     "recharts": "^3.6.0"
   },
